Lutachu: Small fix

--- a/src/lutachu.styl
+++ b/src/lutachu.styl
@@ -13,17 +13,21 @@
 
 @require "typography/article"
 @require "typography/blockquote"
-@require "typography/code"
+@require "typography/codes"
 @require "typography/figure"
 @require "typography/list"
 @require "typography/quote"
-@require "typography/title"
+@require "typography/headings"
+// @require "typography/poem"
+// @require "typography/zh/counter"
 
 @require "elements/button"
 @require "elements/form"
 @require "elements/table"
 
+// @require "components/acomment"
 @require "components/card"
+@require "components/label"
 @require "components/nav"
 
 @require "utilities"
