Typography: Replace `.is-left` and `.is-right` with `.left` and `.right`

--- a/src/typography/figure.styl
+++ b/src/typography/figure.styl
@@ -18,8 +18,8 @@ figure
     img
       width: 100%
 
-  &.is-left
-  &.is-right
+  &.left
+  &.right
     width: 50%
 
   figcaption
@@ -34,8 +34,8 @@ figure
       margin-left: -4%
       margin-right: -4%
 
-    &.is-left
-    &.is-right
+    &.left
+    &.right
       margin-left: 0
 
       float: none !important
