--- a/src/utilities.styl
+++ b/src/utilities.styl
@@ -24,10 +24,10 @@
 /**
  * Floating
  */
-.is-left
+.left
   float: left !important
 
-.is-right
+.right
   float: right !important
 
 .clearfix
@@ -38,6 +38,15 @@
  */
 .is-center
   center()
+
+.is-text-center
+  text-align: center
+
+.is-text-left
+  text-align: left
+
+.is-text-right
+  text-align: right
 
 /**
  * Display
@@ -91,16 +100,3 @@
 
 .is-circle
   border-radius: 99999999px
-
-/**
- * Others
- */
-.is-spin
-  animation: 1s spin infinite
-
-@keyframes spin
-  0%
-    transform rotate(0deg)
-
-  100%
-    transform rotate(360deg)
