Button: Use the same color in `.button`

--- a/src/variables.styl
+++ b/src/variables.styl
@@ -29,6 +29,7 @@ gray-light   = #dbdbdb
 gray-lighter = #efefef
 
 link = #0275d8
+button = link
 
 primary   = #198ac8
 secondary = #16cbdf
@@ -115,6 +116,14 @@ table-border-color = gray-lighter
 table-hover-background = #f5f5f5
 table-active-background = #f5f5f5
 table-striped-background = #f9f9f9
+
+/* Forms */
+input-border-color = gray-light
+
+/**
+ * Components
+ * ========
+ */
 
 /* Labels */
 label-background = gray-lighter
