--- a/src/mixins/button.styl
+++ b/src/mixins/button.styl
@@ -49,6 +49,7 @@ set-button-color(color)
     color: #fff
 
   background-color: color
+  box-shadow: darken(color, 4) 0 0 0 1px inset
 
   &:hover
     background-color: lighten(color, 4)
