--- a/src/variables.styl
+++ b/src/variables.styl
@@ -118,7 +118,12 @@ table-active-background = #f5f5f5
 table-striped-background = #f9f9f9
 
 /* Forms */
+input-color = gray
 input-border-color = gray-light
+input-focus-color  = primary
+
+input-addon-background    = lighten(gray-lighter, 4)
+input-disabled-background = gray-lighter
 
 /**
  * Components
